# boltc

./: .gitignore  Cargo.toml  README.md  a.out  main.rs  mandlebrot  mandlebrot.ll  mir  output.json  run.sh  rustfmt.toml  test.ll  test2.ll  tester  tester.ll
compiler/ast/: Cargo.toml
compiler/ast/src/: astnode.rs  attribute.rs  decl.rs  enum_.rs  expr.rs  func.rs  import.rs  lib.rs  smt.rs  struct_.rs  typ.rs  var.rs  visibility.rs
compiler/blir/: Cargo.toml
compiler/blir/src/: attributes.rs  class.rs  enumdef.rs  expr.rs  func.rs  intrinsics.rs  lib.rs  library.rs  metadata.rs  method.rs  protocol.rs  scope.rs  scopes.rs  smt.rs  structdef.rs  sym.rs  typ.rs  var.rs  visibility.rs  walker.rs
compiler/blir_lowering/: Cargo.toml
compiler/blir_lowering/src/: err.rs  lib.rs
compiler/blir_lowering/src/code/: func.rs  mod.rs
compiler/blir_lowering/src/ty/: enum_.rs  mod.rs  struct_.rs
compiler/blir_lowering/src/val/: flow.rs  mod.rs
compiler/blir_passes/: Cargo.toml
compiler/blir_passes/src/: closure_resolve.rs  init_default.rs  lib.rs  macro_expansion.rs  type_check.rs  type_infer.rs  type_infer_old.rs  type_resolve.rs
compiler/blirssa/: Cargo.toml
compiler/blirssa/src/: builder.rs  lib.rs  library.rs  tests.rs
compiler/bolt-ext/: Cargo.toml
compiler/bolt-ext/src/: attribute.rs  desc.rs  errors.rs  host.rs  lib.rs  operator.rs
compiler/codegen/: Cargo.toml
compiler/codegen/src/: config.rs  context.rs  expr.rs  func.rs  integer.rs  lib.rs  smt.rs  structdef.rs  typ.rs
compiler/docgen/: Cargo.toml
compiler/docgen/src/: attribute.rs  enum_.rs  func.rs  lib.rs  struct_.rs  ty.rs  visibility.rs
compiler/docgen/src/html/: mod.rs  style.css
compiler/error-derive/: Cargo.toml
compiler/error-derive/src/: lib.rs
compiler/errors/: Cargo.toml
compiler/errors/src/: debugger.rs  diag.rs  error.rs  fileinterner.rs  lib.rs  tests.rs
compiler/feature-gate/: Cargo.toml
compiler/feature-gate/src/: lib.rs
compiler/hminfer/: Cargo.toml
compiler/hminfer/src/: lib.rs  table.rs  variant.rs
compiler/lower_ast/: Cargo.toml
compiler/lower_ast/src/: attributes.rs  err.rs  expr.rs  file.rs  func.rs  lib.rs  smt.rs  struct_.rs  tests.rs  ty.rs  var.rs
compiler/lower_ast/src/code/: func.rs  mod.rs
compiler/lower_ast/src/pattern/: mod.rs
compiler/lower_ast/src/typ/: enum_.rs  mod.rs  struct_.rs
compiler/lower_ast/src/value/: mod.rs  unescape.rs
compiler/lower_blir/: Cargo.toml
compiler/lower_blir/src/: enum_.rs  func.rs  lib.rs  match_.rs  smt.rs  struct_.rs  typ.rs  val.rs
compiler/lower_blirssa/: Cargo.toml
compiler/lower_blirssa/src/: enum_.rs  error.rs  func.rs  lib.rs  struct_.rs  typ.rs  value.rs
compiler/mangle/src/: defs.rs  lib.rs  mangled.rs  parser.rs  path.rs  symbol.rs  tests.rs  typ.rs
compiler/mir/: Cargo.toml
compiler/mir/src/: builder.rs  lib.rs  project.rs  tests.rs
compiler/mir_lowering/: Cargo.toml
compiler/mir_lowering/src/: lib.rs
compiler/parser/: Cargo.toml
compiler/parser/src/: context.rs  err.rs  error.rs  lexer.rs  lib.rs  operators.rs  parse_error.rs  tests.rs  token.rs
compiler/passes/: Cargo.toml
compiler/passes/src/: lib.rs  scope.rs
compiler/patmat/: Cargo.toml
compiler/patmat/src/: lib.rs  matrix.rs  solver.rs  tests.rs
compiler/tyinfer/: Cargo.toml
compiler/tyinfer/src/: context.rs  lib.rs  replace.rs  variant.rs
compiler/type_infer/: Cargo.toml
compiler/type_infer/src/: constraint.rs  infer_walker.rs  lib.rs
examples/: decls.h  macros.h  main.bolt  stdint.h  stdintw.h  types.h
examples/extension_template/: Cargo.toml
examples/extension_template/src/: lib.rs
examples/factorial/bolt/: main.bolt
examples/factorial/c/: main.c
examples/factorial/js/: factorial.js
examples/guessing_game/: game.bolt
examples/malloc/: malloc.c
examples/mandlebrot/bolt/: mandlebrot.bolt
lang/: project.yaml
lang/bool/: Bool.bolt  Bool.bolt.tera
lang/float/: Double.bolt  Float.bolt  Float.bolt.tera  Half.bolt
lang/int/: Int.bolt  Int.bolt.tera  Int16.bolt  Int32.bolt  Int64.bolt  Int8.bolt  UInt.bolt  UInt16.bolt  UInt32.bolt  UInt64.bolt  UInt8.bolt
lang/src/: bool.bot  example.bolt  int.bolt  optional.bot
lang/std/: compile.sh  print.bolt  print.c
lang/string/: Char.bolt  Char.bolt.tera  StringSlice.bolt  str.c
lang/test/: test.bolt
lib/c/parser/: Cargo.toml
lib/c/syntax/: Cargo.toml
lib/header/src/: lib.rs  (+3 more)
runtime/: Optional.bolt.tera
runtime/ptr/: List.swift  Optional.swift  String.swift  UnsafePointer.swift
runtime/string/: String.bolt.tera  str.c
runtime/test/: testing.bolt
src/: args.rs  cstd.rs  extension_host.rs  link.rs  main.rs  testing.rs
std/: compile.sh  print.bolt  print.c
test/: hello-world.ll  main.bolt  poly.bolt  run.sh  test.bolt  test.c  test2.bolt
test/closure/: test.bolt
test/control/: GuardAndIfLet.bolt  Init.bolt  LoopReturning.bolt  LoopScopes.bolt
test/enums/: errors.bolt  named.bolt  test.bolt
test/infer/: DefaultConstants.bolt
test/init/: test.bolt
test/linking/: main.bolt
test/llvm/: ReturnInt.bolt
test/macros/: Macros.bolt
test/match/: Ackermann.bolt  IntegerNoDefault.bolt  Variable.bolt  test.json
test/mir/: enum.bolt  integer.bolt  string.bolt
test/mutability/: Shared.bolt  SharedChecking.bolt
test/old/: coalesce.bolt
test/operators/: test.bolt
test/params/: Globals.bolt  Labels.bolt  Shared.bolt  SharedChecking.bolt
test/parse/: Guard.bolt  Without.bolt
test/patterns/: bind.bolt  match.bolt  optional.bolt  test.bolt  wrong.bolt
test/string/: chars.bolt  test.bolt
test/tuples/: test.bolt
test/type-infer/: test.bolt
test/types/: Array.bolt  Pointer.bolt
test/visibility/: ShowPrivate.bolt
test2/match/: Ackermann.bolt  IntegerNoDefault.bolt  test.json
test_old/: loops.bolt
test_old/closure/: test.bolt
test_old/diverging/: test.bolt
test_old/errors/: test.bolt
test_old/mir/: closure.bolt  string.bolt
test_old/operators/: test.bolt
test_old/patterns/: bind.bolt  bool.bolt  patterns.bolt
tools/bpg/: Cargo.toml
tools/header/: Cargo.toml
tools/project/: Cargo.toml
(+149 files in other folders)
