[package]
name = "boltcc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
clap = { version = "3.0.10", features = [ "derive" ] }

parser = { path = "compiler/parser" }
lower_ast = { path = "compiler/lower_ast" }
blir = { path = "compiler/blir" }
blir_passes = { path = "compiler/blir_passes" }
blirssa = { path = "compiler/blirssa" }
lower_blirssa = { path = "compiler/lower_blirssa" }
logos = "0.12.0"

[workspace]

members = [
	"compiler/errors",
	"compiler/parser",
	"compiler/lower_ast",
	"compiler/blir",
	"compiler/blir_passes",
	"compiler/hminfer",
	"compiler/mangle",
	"compiler/lower_blir",
	"compiler/blirssa",
	"compiler/lower_blirssa",
	"compiler/codegen"
]
