[package]
name = "boltc"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
clap = { version = "3.2.5", features = [ "derive" ] }

parser = { path = "compiler/parser" }
lower_ast = { path = "compiler/lower_ast" }
blir = { path = "compiler/blir" }
blir_passes = { path = "compiler/blir_passes" }
blir_lowering = { path = "compiler/blir_lowering" }
mir = { path = "compiler/mir" }
mir_lowering = { path = "compiler/mir_lowering" }
errors = { path = "compiler/errors" }
bolt-ext = { path = "compiler/bolt-ext" }
feature-gate = {path = "compiler/feature-gate"}
docgen = { path = "compiler/docgen" }
logos = "0.12.0"
proc-macro2 = "1.0.36"
etcetera = "0.4.0"
fs_extra = "1.2.0"
libloading = "0.7.3"
json = "0.12.4"
tera = "1.15.0"


[workspace]

members = [
	"compiler/error-derive",
	"compiler/errors",
	"compiler/parser",
	"compiler/lower_ast",
	"compiler/blir",
	"compiler/blir_passes",
	"compiler/blir_lowering",
	"compiler/mangle",
	"compiler/tyinfer",
	"compiler/patmat",
	"compiler/bolt-ext",
	"compiler/feature-gate",
	"compiler/mir",
	"compiler/mir_lowering",
	"compiler/docgen",
]

exclude = [
	"examples/factorial/rust",
	"examples/extension_template"
]

[profile.release]
debug = true
