[package]
name = "blir_lowering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { path = "../errors" }
mir = { path = "../mir" }
blir = { path = "../blir" }
patmat = { path = "../patmat" }
itertools = "0.10.3"
rand = "0.8.4"
