[package]
name = "blir_passes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { path = "../errors" }
blir = { path = "../blir" }
tyinfer = { path = "../tyinfer" }
parser = { path = "../parser" }