[package]
name = "docgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blir = { path = "../blir" }
serde = { version="1.0.133", features = ["derive"] }
serde_json = "1.0.75"
itertools = "0.10.3"
markdown = "0.3.0"
maud = "0.23.0"