[package]
name = "lower_ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bolt-ast = { path = "../ast" }
blir = { path = "../blir" }
prelude = { path = "../../tools/prelude" }
type_infer = { path = "../type_infer" }