[package]
name = "lower_ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rowan = "0.15.4"
parser = { path = "../parser" }
blir = { path = "../blir" }
errors = { path = "../errors" }
fast-float = "0.2.0"
mangle = { path = "../mangle" }