[package]
name = "passes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prelude = { path = "../../tools/prelude" }
blir = { path = "../blir" }
mangle = { path = "../mangle" }
type_infer = { path = "../type_infer" }